--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentSpecifyIntensityDistributionPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentSpecifyIntensityDistributionPanel.ui
@@ -7,20 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>657</width>
-    <height>540</height>
+    <height>410</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
-   <item>
-    <widget class="QPushButton" name="PopulateTreeButton">
-     <property name="text">
-      <string>PopulateTree</string>
-     </property>
-    </widget>
-   </item>
    <item>
     <widget class="ctkCollapsibleGroupBox" name="AnatomicalTreeCollapsibleGroupBox">
      <property name="title">
@@ -42,6 +35,12 @@
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>150</height>
+      </size>
+     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -123,22 +122,6 @@
  </customwidgets>
  <resources/>
  <connections>
-  <connection>
-   <sender>PopulateTreeButton</sender>
-   <signal>clicked()</signal>
-   <receiver>EMSegmentAnatomicalTreeWidget</receiver>
-   <slot>setup()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>407</x>
-     <y>26</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>407</x>
-     <y>101</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>qSlicerEMSegmentSpecifyIntensityDistributionPanel</sender>
    <signal>mrmlManagerChanged(vtkEMSegmentMRMLManager*)</signal>
