ENH: EMSegment - Updated DefineInputChannelPanel to use qSlicerEMSegmentInputChannelListWidget
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14635 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineInputChannelsPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineInputChannelsPanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>545</width>
-    <height>313</height>
+    <width>602</width>
+    <height>361</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,59 +21,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QTableWidget" name="InputChannelTableWidget">
-        <row>
-         <property name="text">
-          <string>1</string>
-         </property>
-        </row>
-        <row>
-         <property name="text">
-          <string>2</string>
-         </property>
-        </row>
-        <column>
-         <property name="text">
-          <string>VolumeName</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>VolumeNodeSelector</string>
-         </property>
-        </column>
-       </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QPushButton" name="AddChannelButton">
-          <property name="text">
-           <string>Add Channel</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="RemoveChannelButton">
-          <property name="text">
-           <string>Remove Channel</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
+       <widget class="qSlicerEMSegmentInputChannelListWidget" name="EMSegmentInputChannelListWidget"/>
       </item>
      </layout>
     </widget>
@@ -98,18 +46,46 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>qSlicerWidget</class>
+   <extends>QWidget</extends>
+   <header>qSlicerWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>qSlicerEMSegmentInputChannelListWidget</class>
+   <extends>qSlicerEMSegmentWidget</extends>
+   <header>qSlicerEMSegmentInputChannelListWidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>qSlicerEMSegmentWidget</class>
+   <extends>qSlicerWidget</extends>
+   <header>qSlicerEMSegmentWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>ctkCollapsibleGroupBox</class>
    <extends>QGroupBox</extends>
    <header>ctkCollapsibleGroupBox.h</header>
    <container>1</container>
   </customwidget>
-  <customwidget>
-    <class>qSlicerEMSegmentWidget</class>
-    <extends>qSlicerWidget</extends>
-    <header>qSlicerEMSegmentWidget.h</header>
-    <container>1</container>
-   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>qSlicerEMSegmentDefineInputChannelsPanel</sender>
+   <signal>mrmlManagerChanged(vtkEMSegmentMRMLManager*)</signal>
+   <receiver>EMSegmentInputChannelListWidget</receiver>
+   <slot>setMRMLManager(vtkEMSegmentMRMLManager*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>594</x>
+     <y>8</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>508</x>
+     <y>44</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
