ENH: Fix the command line module parameter sets
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14661 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCLI/Resources/UI/qSlicerCLIModule.ui
+++ b/Base/QTCLI/Resources/UI/qSlicerCLIModule.ui
@@ -7,26 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>433</width>
-    <height>233</height>
+    <height>428</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
-   <property name="spacing">
-    <number>0</number>
-   </property>
-   <property name="margin">
-    <number>0</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <widget class="QScrollArea" name="scrollArea">
-     <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
-     </property>
-     <property name="lineWidth">
-      <number>0</number>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -39,8 +30,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>431</width>
-        <height>108</height>
+        <width>415</width>
+        <height>374</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -48,7 +39,7 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="ctkCollapsibleButton" name="MainCollapsibleWidget">
+        <widget class="ctkCollapsibleButton" name="ModuleCollapsibleButton">
          <property name="text">
           <string>Module Title</string>
          </property>
@@ -56,32 +47,8 @@
           <enum>QFrame::StyledPanel</enum>
          </property>
          <layout class="QVBoxLayout" name="VerticalLayout">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <property name="rightMargin">
-           <number>0</number>
-          </property>
-          <property name="bottomMargin">
-           <number>0</number>
-          </property>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <property name="leftMargin">
-             <number>9</number>
-            </property>
-            <property name="topMargin">
-             <number>2</number>
-            </property>
-            <property name="rightMargin">
-             <number>9</number>
-            </property>
-            <property name="bottomMargin">
-             <number>2</number>
-            </property>
             <item>
              <widget class="QLabel" name="label">
               <property name="text">
@@ -96,7 +63,7 @@
                 <string>vtkMRMLCommandLineModuleNode</string>
                </stringlist>
               </property>
-              <property name="ShowHidden" stdset="0">
+              <property name="showHidden">
                <bool>true</bool>
               </property>
              </widget>
@@ -105,38 +72,19 @@
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
-            <property name="spacing">
-             <number>2</number>
-            </property>
-            <property name="leftMargin">
-             <number>9</number>
-            </property>
-            <property name="topMargin">
-             <number>2</number>
-            </property>
-            <property name="rightMargin">
-             <number>9</number>
-            </property>
-            <property name="bottomMargin">
-             <number>9</number>
-            </property>
-            <item>
-             <spacer name="horizontalSpacer_2">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
             <item>
              <widget class="QLabel" name="label_2">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
                <string>Status:</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
               </property>
              </widget>
             </item>
@@ -153,40 +101,21 @@
         </widget>
        </item>
        <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+        <widget class="QWidget" name="widget_2" native="true">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>9</height>
-          </size>
-         </property>
-        </spacer>
+        </widget>
        </item>
       </layout>
      </widget>
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>88</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
     <layout class="QHBoxLayout" name="ButtonLayout">
-     <property name="leftMargin">
-      <number>0</number>
-     </property>
      <item>
       <widget class="QPushButton" name="DefaultPushButton">
        <property name="enabled">
@@ -252,7 +181,7 @@
   </customwidget>
   <customwidget>
    <class>qMRMLNodeComboBox</class>
-   <extends>QComboBox</extends>
+   <extends>QWidget</extends>
    <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
@@ -275,8 +204,8 @@
      <y>109</y>
     </hint>
     <hint type="destinationlabel">
-     <x>298</x>
-     <y>44</y>
+     <x>411</x>
+     <y>91</y>
     </hint>
    </hints>
   </connection>
